# el7008-object_segmentation

./: CMakeLists.txt  imagesToPgm.cpp  segmentationImg.cpp
analisis movimiento/: README.txt  pointsExtraction2.cpp  pts2
analisis profundidad/RGBD/: README.txt  newElasMain_NoteThatInTheZipFilesIsTheRealOne_IsAlreadyInThelibelasForlderSoDontMind.cpp
analisis profundidad/RGBD/libelas/: CMakeCache.txt  Makefile  README ELAS COMMAND.txt  README.TXT  cmake_install.cmake  elas
libelas/: CMakeCache.txt  Makefile  cmake_install.cmake  elas
libelas/TEST/images_pgm/left/: 00005935.pgm  (+7 more)
libelas/images/: left.pgm  left_disp.pgm  right.pgm  right_disp.pgm
libelas/images_pgm/left/: 00005936.pgm  00005938.pgm  00005940.pgm  00005942.pgm  00005943.pgm  00005946.pgm
libelas/images_pgm/right/: 00005756.pgm  00005757.pgm  00005758.pgm  00005760.pgm  00005761.pgm  00005769.pgm
libelas/methods/: imagesToPgm.cpp  pgm
libelas/proyectoRGB/: pointsExtraction.cpp  pts
libelas/src/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  main.cpp  seg  segmentationImg.cpp
methods_good/: img_info_LR.txt  parse  parse.cpp  seg  segmentationImg.cpp  segmentationImgOLD.cpp  topgm
proyectoRGB_almost/: pointsExtraction2.cpp  pt2s  pts
rgb/: pointsExtraction.cpp  pointsExtraction2.cpp
rgbd/methods/: imagesToPgm.cpp  parse.h  pt  ptmix  pts  ptsvm  segmentationImg.cpp  segmentationImgMix.cpp  segmentationImgMixSVM.cpp  sel  selectDisparitys.cpp  sg  sgmix  topgm
rgbd/src/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  main.cpp
(+47 files in other folders)
